Update header in index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git sample</title>
 </head>
+<header>
+    <h2>Hello Everyone</h2>
+    <h6>This is sample with git</h6>
+</header>
 
 <body>
 
